--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container">
     <aside class="side-background">
       <div class="logo">
-        <img src="odin-logo.png" alt="LOGO">ODIN
+        <img src="odin-logo.png" alt="LOGO"> 
       </div>
       <!-- <img src="./background.jpg" alt="background image"> -->
     </aside>
